objects/Rosco_domain__c/Rosco_domain__c.object-meta.xml
<CustomObject>
    <label>rosco_domain</label>
    <nameField>
        <label>domain</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>rosco_domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>