objects/Rosco_domain__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>rosco_domains</relationshipLabel>
    <relationshipName>rosco_domains</relationshipName>
    <type>Lookup</type>
</CustomField>