objects/Rosco_domain__c/fields/afterhour_response__c.field-meta.xml
<CustomField>
    <fullName>afterhour_response__c</fullName>
    <label>afterhour_response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>