objects/Rosco_domain__c/fields/Auto_Assign_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assign_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Assign Contacts</label>
    <type>Checkbox</type>
</CustomField>