objects/Rosco_domain__c/fields/Auto_register_developer_tanium_com__c.field-meta.xml
<CustomField>
    <fullName>Auto_register_developer_tanium_com__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto register developer.tanium.com</label>
    <type>Checkbox</type>
</CustomField>