objects/Rosco_domain__c/fields/user_automation__c.field-meta.xml
<CustomField>
    <fullName>user_automation__c</fullName>
    <label>User Registration Automation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Automation</fullName>
            </value>
            <value>
                <fullName>Account Only</fullName>
            </value>
            <value>
                <fullName>Support KB</fullName>
            </value>
            <value>
                <fullName>Support Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>