objects/Rosco_domain__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Auto_Assign_Contacts__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>